--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "~2.0.13",
-        "bower-asset/jquery-treegrid": "0.3.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "yiisoft/yii2": "~2.0.13"
     },
     "autoload": {
         "psr-4": {
